--- a/main.css
+++ b/main.css
@@ -1,36 +1,22 @@
-/* Minimal va engil CSS */
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #f0f8ff, #e6f7ff);
   color: #333;
   box-sizing: border-box;
 }
-.overlay {
-  position: fixed;
-  inset: 0;
-  z-index: -1;
-  background-image: url("./assets/images/oziq-ovqat.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
 
-.dark-layer {
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.451);
+.wrapper {
+  background: #fff;
 }
 
 .catalog {
   max-width: 800px;
   margin: auto;
-  padding: 20px;
+  padding: 30px;
   margin-block: 20px;
   border-radius: 5px;
-  background: #f3fcffb3;
-  backdrop-filter: blur(7px);
+  background: #e2f8ff;
   box-shadow: 0 0 10px rgba(238, 250, 255, 0.785);
 }
 .product {
